

Features:
- defs: add HXSIZEOF_Z*


libHX 2.1 (December 23 2008)
============================
- defs: fix bogus offsetof macro for non-GCC
- defs: add a pair of guarding parentheses in static_cast()
- doc: generate PDF file from LyX document


libHX 2.0 (December 23 2008)
============================
Fixes:
- arbtree: reject illegal flag combinations
- arbtree: correctly set errno in HXbtree_find and HXbtree_get
- arbtree: do not return dangling pointer in HXbtree_del
- defs: add a working offsetof() and containerof() for C++ mode
- defs: use GCC's __builtin_offsetof
- defs: resolve warnings with signed_cast() for char* -> const char* conversions
- dir: HX_rrmdir: do not stop on error
- mc: change first argument type for HXmc_dup()
  [compatible change, no ABI version bump]
- opt: fix interpretation of strings during conversion to bool
  (all strings that were not empty and not 0 were interpreted as "true",
  and this included the strings "no", "off" and "false", which should
  actually have mapped to, well, "false".)
- rand: use autoconf to detect presence of unix functions
- string: replace HX_strrev implementation by one that does not allocate


New feature: Type-checking casts.
- defs: enable type-checking signed_cast()
- defs: add signed_cast<> for C++ mode
- defs: rewrite static_cast() to not cause -Wshadow warnings when nested
- defs: rewrite const_cast() to do type checking
  (actually, const_cast1(), cosnt_cast2() and const_cast3() were introduced.
  const_cast() is kept to not break program compilation.)


New misc code:
- ctype_helper: initial version
- deque: add struct HXdeque_node->char *sptr as a typed variant for ptr
- mc: add HXmc_setlen()
- opt: HXTYPE_BOOL and HXTYPE_NONE now take int * (instead of unsigned int *)


New arbtree code:
- arbtree: add struct HXbtree_node->char *skey and char *sdata
- arbtree: support arbitrary key/data duplication
- arbtree: add HXbtree_init2


Removals:
- mc: remove HXmc_dup